--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "deps",
     "dijkstras",
     "ellps",
+    "firestore",
     "fishsample",
     "flowtype",
     "fullscreen",
@@ -23,10 +24,12 @@
     "latlngs",
     "LEUKOCRIT",
     "mapinited",
+    "mapservice",
     "MOREINFO",
     "moveend",
     "Msgs",
     "nosniff",
+    "oidc",
     "PLPRO",
     "PSBR",
     "SAMEORIGIN",
@@ -38,6 +41,7 @@
     "toastify",
     "UDWR",
     "unproject",
+    "utahid",
     "WILDADMIN",
     "WWID",
     "yada",
