--- a/firebase.json
+++ b/firebase.json
@@ -73,5 +73,26 @@
       "source": "**",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "source": "functions"
+  },
+  "emulators": {
+    "ui": {
+      "enabled": true
+    },
+    "auth": {
+      "port": 9099
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "functions": {
+      "port": 5001
+    },
+    "hosting": {
+      "port": 5000
+    }
+  },
+  "firestore": {}
 }
