--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "firebase-admin": "^10.2.0",
+    "firebase-auth-arcgis-server-proxy": "^1.0.0",
     "firebase-functions": "^3.21.2"
   }
 }
