--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@storybook/addon-essentials": "^6.1.20",
     "@storybook/addon-links": "^6.1.20",
     "@storybook/react": "^6.1.20",
-    "@testing-library/cypress": "^8.0.2",
+    "@testing-library/cypress": "^8.0.3",
     "babel-core": "6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
@@ -83,8 +83,9 @@
     "babel-preset-latest": "^6.24.1",
     "concurrently": "^5.3.0",
     "core-js": "^3.8.3",
-    "cypress": "^9.6.0",
+    "cypress": "^10.0.3",
     "cypress-plugin-tab": "^1.0.5",
+    "cypress-terminal-report": "^4.0.1",
     "dojo-webpack-plugin": "^2.8.18",
     "es6-object-assign": "1.1.0",
     "eslint": "^7.19.0",
