--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,12 @@ jobs:
           install-command: npm ci --legacy-peer-deps
           browser: chrome
 
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: cypress-videos
+          path: cypress/videos
+
       - name: Upload Cypress Screenshots
         uses: actions/upload-artifact@v3
         if: failure()
