--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "dependencies": {
     "downshift": "^6.1.0",
     "esri-leaflet": "^3.0.1",
-    "immer": "^8.0.1",
+    "immer": "^9.0.15",
     "leaflet": "^1.7.1",
     "localforage": "^1.9.0",
     "pubsub-js": "^1.9.0",
@@ -56,7 +56,7 @@
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.1.0",
     "react-toastify": "^6.1.0",
-    "use-immer": "^0.4.2",
+    "use-immer": "^0.7.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -83,7 +83,7 @@
     "babel-preset-latest": "^6.24.1",
     "concurrently": "^5.3.0",
     "core-js": "^3.8.3",
-    "cypress": "^10.0.3",
+    "cypress": "^10.4.0",
     "cypress-plugin-tab": "^1.0.5",
     "cypress-terminal-report": "^4.0.1",
     "dojo-webpack-plugin": "^2.8.18",
@@ -112,12 +112,11 @@
     "grunt-contrib-jasmine": "2.0.1",
     "grunt-contrib-stylus": "^1.2.0",
     "grunt-contrib-uglify": "^5.2.1",
-    "grunt-contrib-watch": "1.0.1",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-dojo": "^1.1.2",
     "grunt-eslint": "^23.0.0",
     "grunt-newer": "^1.2.0",
     "grunt-processhtml": "^0.4.1",
-    "grunt-ssh": "^0.12.9",
     "jasmine": "3.1.0",
     "load-grunt-tasks": "^3.5.2",
     "prettier": "^2.2.1",
