--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,7 @@ jobs:
 
   deploy-dev:
     runs-on: ubuntu-latest
-    needs: [build, test]
+    needs: [build, test, cypress]
     environment:
       name: dev
       url: https://electrofishing.dev.utah.gov
@@ -157,7 +157,7 @@ jobs:
 
   deploy-prod:
     runs-on: ubuntu-latest
-    needs: [build, test]
+    needs: [build, test, cypress]
     environment:
       name: prod
       url: https://electrofishing.ugrc.utah.gov
