fix: get storybook up and running again
Remember that I can't import anything from the app package into stories or deps.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:app": "npm run babel-deps && sass _src/react-app:src/react-app --watch & npm run babel-react-watch & grunt",
     "start:firebase-emulators": "firebase emulators:start --import emulator_data --export-on-exit --only firestore,functions,auth,ui",
     "start": "concurrently \"npm run start:app\" \"npm run start:firebase-emulators\"",
-    "storybook": "start-storybook -p 6006 --no-dll -s ./src",
+    "storybook": "start-storybook -p 6006 --no-dll",
     "test": "eslint ./_src",
     "postinstall": "npm install -g bower && bower install"
   },
@@ -67,10 +67,12 @@
     "@babel/plugin-transform-parameters": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
-    "@storybook/addon-actions": "^6.1.20",
-    "@storybook/addon-essentials": "^6.1.20",
-    "@storybook/addon-links": "^6.1.20",
-    "@storybook/react": "^6.1.20",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/react": "^6.5.10",
     "@testing-library/cypress": "^8.0.3",
     "babel-core": "6.26.3",
     "babel-eslint": "^10.1.0",
@@ -86,7 +88,7 @@
     "cypress": "^10.4.0",
     "cypress-plugin-tab": "^1.0.5",
     "cypress-terminal-report": "^4.0.1",
-    "dojo-webpack-plugin": "^2.8.18",
+    "dojo-webpack-plugin": "^3.0.4",
     "es6-object-assign": "1.1.0",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
