--- a/package.json
+++ b/package.json
@@ -46,11 +46,14 @@
     "printWidth": 120
   },
   "dependencies": {
+    "clsx": "^1.2.1",
     "downshift": "^6.1.0",
     "esri-leaflet": "^3.0.1",
     "immer": "^9.0.15",
     "leaflet": "^1.7.1",
     "localforage": "^1.9.0",
+    "proj4": "^2.8.0",
+    "proj4leaflet": "^1.0.2",
     "pubsub-js": "^1.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -72,6 +75,7 @@
     "@storybook/addon-links": "^6.5.10",
     "@storybook/builder-webpack5": "^6.5.10",
     "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.10",
     "@testing-library/cypress": "^8.0.3",
     "babel-core": "6.26.3",
@@ -85,6 +89,7 @@
     "babel-preset-latest": "^6.24.1",
     "concurrently": "^5.3.0",
     "core-js": "^3.8.3",
+    "css-loader": "^6.7.1",
     "cypress": "^10.4.0",
     "cypress-plugin-tab": "^1.0.5",
     "cypress-terminal-report": "^4.0.1",
@@ -123,7 +128,9 @@
     "load-grunt-tasks": "^3.5.2",
     "prettier": "^2.2.1",
     "react-is": "^17.0.1",
-    "sass": "^1.29.0",
-    "start-server-and-test": "^1.11.5"
+    "sass": "^1.54.3",
+    "sass-loader": "^13.0.2",
+    "start-server-and-test": "^1.11.5",
+    "style-loader": "^3.3.1"
   }
 }
