--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,12 @@ jobs:
           name: cypress-screenshots
           path: cypress/screenshots
 
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: cypress-videos
+          path: cypress/videos
+
   test:
     runs-on: ubuntu-latest
     steps:
