fix: reactify Method tab and equipment component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "autoheight",
     "autoplay",
     "BWID",
+    "canoebarge",
     "CARTOCODE",
     "clrk",
     "Combobox",
@@ -18,6 +19,7 @@
     "flowtype",
     "fullscreen",
     "geodef",
+    "geodefs",
     "GNIS",
     "HEMATOCRIT",
     "Heyman",
@@ -37,12 +39,14 @@
     "PLPRO",
     "PLSS",
     "PSBR",
+    "raftboat",
     "reactfire",
     "SAMEORIGIN",
     "scroller",
     "Segs",
     "startdistdir",
     "startend",
+    "tanstack",
     "testid",
     "toastify",
     "UDWR",
