fix: get id token directly in service worker
No more posting messages or setInterval.

https://firebase.google.com/docs/auth/web/service-worker-sessions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,9 @@
     "nosniff",
     "oidc",
     "PLPRO",
+    "PLSS",
     "PSBR",
+    "reactfire",
     "SAMEORIGIN",
     "scroller",
     "Segs",
