--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "clsx": "^1.2.1",
     "downshift": "^6.1.9",
     "esri-leaflet": "^3.0.1",
+    "firebase": "^9.17.1",
     "immer": "^9.0.15",
     "leaflet": "^1.7.1",
     "localforage": "^1.9.0",
@@ -94,7 +95,9 @@
     "cypress-plugin-tab": "^1.0.5",
     "cypress-terminal-report": "^5.0.2",
     "dojo-webpack-plugin": "^3.0.4",
+    "dotenv-cli": "^7.0.0",
     "es6-object-assign": "1.1.0",
+    "esbuild": "^0.17.8",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-config-react-app": "^6.0.0",
