--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:firebase-emulators": "firebase emulators:start --import emulator_data --export-on-exit --only firestore,functions,auth,ui",
     "start": "concurrently \"npm run start:app\" \"npm run start:firebase-emulators\"",
     "storybook": "start-storybook -p 6006 --no-dll",
-    "test": "eslint ./_src",
+    "test": "eslint ./_src && vitest",
     "postinstall": "npm install -g bower && bower install"
   },
   "browserslist": [
@@ -135,6 +135,8 @@
     "sass": "^1.54.3",
     "sass-loader": "^13.0.2",
     "start-server-and-test": "^1.11.5",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "vite": "^4.1.1",
+    "vitest": "^0.28.5"
   }
 }
