chore: simplify cypress commands

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "babel-react": "babel --out-dir src/react-app _src/react-app",
     "build-stage": "export REACT_APP_BUILD=stage && export BABEL_ENV=test && npm run babel-deps && npm run sass && npm run babel-react && grunt build-stage",
     "build": "export REACT_APP_BUILD=prod && export BABEL_ENV=production && npm run babel-deps && npm run sass && npm run babel-react && grunt build-prod",
-    "cypress:open": "concurrently \"npm start\" \"cypress open\"",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "sass": "sass _src/react-app:src/react-app",
     "start:app": "npm run babel-deps && sass _src/react-app:src/react-app --watch & npm run babel-react-watch & grunt",
     "start:firebase-emulators": "firebase emulators:start --import emulator_data --export-on-exit --only firestore,functions,auth,ui",
