feat: add additional stats to summary report before submission
Closes #69
Fixes #77

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "autogen",
     "autoheight",
     "autoplay",
+    "BHBK",
     "BWID",
     "canoebarge",
     "CARTOCODE",
@@ -19,6 +20,7 @@
     "fishsample",
     "flowtype",
     "fullscreen",
+    "Fultons",
     "geodef",
     "geodefs",
     "GNIS",
