--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -31,7 +31,7 @@ jobs:
       - name: ⎔ Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version-file: .node-version
+          node-version: lts/*
           cache: npm
 
       - name: Install functions deps
@@ -74,7 +74,7 @@ jobs:
       - name: ⎔ Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version-file: .node-version
+          node-version: lts/*
           cache: npm
 
       - name: 📥 Download dependencies
@@ -93,7 +93,7 @@ jobs:
       - name: ⎔ Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version-file: .node-version
+          node-version: lts/*
           cache: npm
 
       - name: 📥 Download dependencies
