fix: React-ify Habitat Tab
#232

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "autogen",
     "autoheight",
     "autoplay",
+    "Bankfull",
     "BHBK",
     "BWID",
     "canoebarge",
@@ -40,6 +41,7 @@
     "Msgs",
     "nosniff",
     "oidc",
+    "Overstory",
     "PLPRO",
     "PLSS",
     "prebuild",
