--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "2.1.0-3",
   "scripts": {
     "build:sw": "esbuild src/ServiceWorker.js --bundle --outfile=public/ServiceWorker.js --define:process.env.VITE_FIREBASE_CONFIG=$(npx dotenv -p VITE_FIREBASE_CONFIG)",
-    "build:stage": "export VITE_BUILD=stage && export BABEL_ENV=test && npm run build:sw && vite build",
-    "build": "export VITE_BUILD=prod && export BABEL_ENV=production && npm run build:sw && vite build",
+    "build:stage": "export VITE_BUILD=stage && npm run build:sw && vite build",
+    "build": "export VITE_BUILD=prod && npm run build:sw && vite build",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "lint": "eslint . --ext .js,.jsx",
     "preview": "vite preview",
+    "postinstall": "cd functions && npm install",
     "start:app": "npm run build:sw && vite",
     "start:firebase-emulators": "firebase emulators:start --import emulator_data --export-on-exit --only firestore,functions,auth,ui",
     "start": "concurrently \"npm run start:app\" \"npm run start:firebase-emulators\"",
