chore: implement packagejson and imports prettier plugins

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,13 +1,16 @@
 .github
 .vscode
+.release-please-manifest.json
+CHANGELOG.md
 build
 data
+dist
 emulator_data
 firebase-export*
 maps
 mockups
 node_modules
+package-lock.json
+public/ServiceWorker.js
 scripts
 tests/data
-public/ServiceWorker.js
-package-lock.json
