--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,16 @@
+.github
 .vscode
+.release-please-manifest.json
+CHANGELOG.md
+build
 data
 dist
+emulator_data
+firebase-export*
 maps
 mockups
 node_modules
 package-lock.json
-package.json
+public/ServiceWorker.js
 scripts
+tests/data
