--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,11 +22,11 @@ jobs:
       - name: ⬇️ Set up code
         uses: actions/checkout@v3
 
-      - name: Cache Emulators
+      - name: 💾 Cache firebase emulators
         uses: actions/cache@v3
         with:
-          path: ~/.cache/firebase/emulators
-          key: ${{ runner.os }}-firebase-emulators-${{ hashFiles('~/.cache/firebase/emulators/**') }}
+          path: /home/runner/.cache/firebase/emulators
+          key: ${{ runner.os }}-firebase-emulators
 
       - name: ⎔ Setup Node.js
         uses: actions/setup-node@v3
