--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -25,8 +25,9 @@ jobs:
       - name: 💾 Cache firebase emulators
         uses: actions/cache@v3
         with:
-          path: /home/runner/.cache/firebase/emulators
-          key: ${{ runner.os }}-firebase-emulators
+          path: ${{ env.FIREBASE_EMULATORS_PATH }}
+          key: ${{ runner.os }}-firebase-emulators-${{ hashFiles('emulator-cache/**') }}
+        continue-on-error: true
 
       - name: ⎔ Setup Node.js
         uses: actions/setup-node@v3
