--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "firebase": "^9.17.2",
     "immer": "^9.0.15",
     "leaflet": "^1.7.1",
+    "leaflet-loading": "^0.1.24",
     "localforage": "^1.9.0",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.0",
@@ -83,6 +84,7 @@
     "react-error-boundary": "^3.1.4",
     "react-leaflet": "^4.2.1",
     "react-toastify": "^9.1.1",
+    "spin.js": "^4.1.1",
     "use-immer": "^0.8.1",
     "uuid": "^9.0.0"
   },
