--- a/package.json
+++ b/package.json
@@ -64,57 +64,58 @@
     }
   },
   "dependencies": {
-    "@tanstack/react-table": "^8.8.5",
+    "@tanstack/react-table": "^8.9.1",
     "bootstrap": "^3.3.6",
     "clsx": "^1.2.1",
     "downshift": "^7.6.0",
-    "esri-leaflet": "^3.0.1",
-    "firebase": "^9.19.1",
-    "immer": "^9.0.21",
-    "leaflet": "^1.7.1",
+    "esri-leaflet": "^3.0.10",
+    "firebase": "^9.22.0",
+    "immer": "^10.0.2",
+    "leaflet": "^1.9.3",
     "leaflet-loading": "^0.1.24",
-    "localforage": "^1.9.0",
+    "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
-    "proj4": "^2.8.0",
+    "proj4": "^2.9.0",
     "proj4leaflet": "^1.0.2",
-    "pubsub-js": "^1.9.0",
+    "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.3",
+    "react-error-boundary": "^4.0.4",
     "react-leaflet": "^4.2.1",
-    "react-toastify": "^9.1.2",
+    "react-toastify": "^9.1.3",
     "spin.js": "^4.1.1",
     "use-immer": "^0.9.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^7.0.2",
-    "@storybook/addon-essentials": "^7.0.2",
-    "@storybook/addon-links": "^7.0.2",
-    "@storybook/react": "^7.0.2",
-    "@storybook/react-vite": "^7.0.2",
+    "@storybook/addon-actions": "^7.0.12",
+    "@storybook/addon-essentials": "^7.0.12",
+    "@storybook/addon-links": "^7.0.12",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^7.0.12",
+    "@storybook/react-vite": "^7.0.12",
     "@testing-library/cypress": "^9.0.0",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.0.0",
     "concurrently": "^8.0.1",
-    "cypress": "^12.9.0",
+    "cypress": "^12.12.0",
     "cypress-plugin-tab": "^1.0.5",
     "cypress-terminal-report": "^5.1.1",
-    "dotenv-cli": "^7.0.0",
-    "esbuild": "^0.17.15",
-    "eslint": "^8.37.0",
+    "dotenv-cli": "^7.2.1",
+    "esbuild": "^0.17.19",
+    "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-cypress": "^2.13.2",
+    "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^5.10.2",
-    "firebase-tools": "^11.25.2",
-    "prettier": "^2.8.7",
-    "sass": "^1.60.0",
-    "storybook": "next",
-    "vite": "^4.2.1",
-    "vitest": "^0.29.8"
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.11.0",
+    "firebase-tools": "^12.0.0",
+    "prettier": "^2.8.8",
+    "sass": "^1.62.1",
+    "storybook": "^7.0.12",
+    "vite": "^4.3.6",
+    "vitest": "^0.31.0"
   }
 }
