--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,20 +1,27 @@
 version: 2
 updates:
+  - package-ecosystem: npm
+    directory: /
+    schedule:
+      interval: monthly
+      groups:
+        safe-app-dependencies:
+          update-types: ['minor', 'patch']
+        major-app-dependencies:
+          update-types: ['major']
+  - package-ecosystem: npm
+    directory: /function
+    schedule:
+      interval: monthly
+      groups:
+        safe-function-dependencies:
+          update-types: ['minor', 'patch']
+        major-function-dependencies:
+          update-types: ['major']
   - package-ecosystem: github-actions
     directory: /
     schedule:
       interval: monthly
-    labels:
-      - dependencies
-  - package-ecosystem: npm
-    directory: /
-    schedule:
-      interval: monthly
-    labels:
-      - dependencies
-  - package-ecosystem: npm
-    directory: functions/
-    schedule:
-      interval: monthly
-    labels:
-      - dependencies
+    groups:
+      ci-dependencies:
+        dependency-type: 'production'
