--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,9 @@ updates:
         update-types: ['minor', 'patch']
       major-app-dependencies:
         update-types: ['major']
+    commit-message:
+      prefix: deps
+      prefix-development: deps(dev)
   - package-ecosystem: npm
     directory: /functions
     schedule:
@@ -18,6 +21,9 @@ updates:
         update-types: ['minor', 'patch']
       major-function-dependencies:
         update-types: ['major']
+    commit-message:
+      prefix: deps
+      prefix-development: deps(dev)
   - package-ecosystem: github-actions
     directory: /
     schedule:
