--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: ⬇️ Set up code
         uses: actions/checkout@v4
+        with:
+          show-progress: false
 
       - name: 💾 Cache firebase emulators
         uses: actions/cache@v3
@@ -68,6 +70,8 @@ jobs:
     steps:
       - name: ⬇️ Set up code
         uses: actions/checkout@v4
+        with:
+          show-progress: false
 
       - name: ⎔ Setup Node.js
         uses: actions/setup-node@v3
@@ -87,6 +91,8 @@ jobs:
     steps:
       - name: ⬇️ Checkout code
         uses: actions/checkout@v4
+        with:
+          show-progress: false
 
       - name: ⎔ Setup Node.js
         uses: actions/setup-node@v3
