--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -38,7 +38,7 @@ jobs:
           cache: npm
 
       - name: Cypress run
-        uses: cypress-io/github-action@v5
+        uses: cypress-io/github-action@v6
         env:
           VITE_QUAD_WORD: test
           VITE_FIREBASE_CONFIG: ${{ secrets.TEST_FIREBASE_CONFIG }}
@@ -47,7 +47,7 @@ jobs:
           start: npm start
           install-command: npm ci
           browser: chrome
-          wait-on: 'http://127.0.0.1:4000'
+          wait-on: 'http://127.0.0.1:4000, http://localhost:5173'
           wait-on-timeout: 120
 
       - name: Upload Cypress Screenshots
