--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -27,7 +27,7 @@ jobs:
       - name: 💾 Cache firebase emulators
         uses: actions/cache@v3
         with:
-          path: ${{ env.FIREBASE_EMULATORS_PATH }}
+          path: ~/.cache/firebase/emulators
           key: ${{ runner.os }}-firebase-emulators-${{ hashFiles('emulator-cache/**') }}
         continue-on-error: true
 
