--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -47,7 +47,7 @@ jobs:
           start: npm start
           install-command: npm ci
           browser: chrome
-          wait-on: 'http://127.0.0.1:4000, http://localhost:5173'
+          wait-on: 'http://127.0.0.1:4000, http://127.0.0.1:5173'
           wait-on-timeout: 120
 
       - name: Upload Cypress Screenshots
