chore: Cypress -> Playwright

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -25,43 +25,44 @@ jobs:
           show-progress: false
 
       - name: 💾 Cache firebase emulators
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: /home/runner/.cache/firebase/emulators
           key: ${{ runner.os }}-firebase-emulators-${{ hashFiles('emulator-cache/**') }}
         continue-on-error: true
 
       - name: ⎔ Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: npm
 
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
+      - name: 📥 Download dependencies
+        run: npm ci
+
+      - name: 💻 Install Playwright Browsers
+        run: npx playwright install chromium --with-deps
+
+      - name: 🚀 Start App
+        run: |
+          npm run start:e2e-resources &
+          npx wait-on http://127.0.0.1:5173
+          npx wait-on http://127.0.0.1:4000/auth
         env:
-          VITE_QUAD_WORD: test
-          VITE_FIREBASE_CONFIG: ${{ secrets.TEST_FIREBASE_CONFIG }}
+          VITE_QUAD_WORD: ${{ secrets.QUAD_WORD }}
+          VITE_FIREBASE_CONFIG: ${{ secrets.FIREBASE_CONFIG }}
           VITE_BUILD: development
-        with:
-          start: npm start
-          install-command: npm ci
-          browser: chrome
-          wait-on: 'http://127.0.0.1:4000, http://127.0.0.1:5173'
-          wait-on-timeout: 120
 
-      - name: Upload Cypress Screenshots
-        uses: actions/upload-artifact@v3
-        if: failure()
-        with:
-          name: cypress-screenshots
-          path: cypress/screenshots
+      - name: ⏯️ Run Playwright Tests
+        run: npm run e2e
 
-      - uses: actions/upload-artifact@v3
-        if: failure()
+      - name: ⬆️ Upload Artifacts
+        uses: actions/upload-artifact@v4
+        if: always()
         with:
-          name: cypress-videos
-          path: cypress/videos
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
 
   test-unit:
     name: Unit tests
@@ -74,7 +75,7 @@ jobs:
           show-progress: false
 
       - name: ⎔ Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: npm
@@ -95,7 +96,7 @@ jobs:
           show-progress: false
 
       - name: ⎔ Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: npm
