--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,11 @@ maps/ImportLog
 emulator_data/
 firebase-export*
 
-cypress/videos/
-cypress/screenshots/
-
 public/ServiceWorker.js
 maps/maps_index/
+
+#: Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
