--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -115,7 +115,7 @@ jobs:
     name: Firebase preview
     runs-on: ubuntu-latest
     needs: [test-functional, test-unit, test-build]
-    if: ${{ github.event.sender.type == 'User' }}
+    if: ${{ github.event.sender.type == 'User' && github.head_ref != 'dev' }}
     environment:
       name: dev
 
