--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,5 +34,4 @@ jobs:
           github-app-key: ${{ secrets.UGRC_RELEASE_BOT_APP_KEY }}
           github-app-name: ${{ secrets.UGRC_RELEASE_BOT_NAME }}
           github-app-email: ${{ secrets.UGRC_RELEASE_BOT_EMAIL }}
-          extra-files: |
-            src/config.js
+          extra-files: src/config.js
