deps: FY25 Q3 dependency bumps 🌲

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "postinstall": "cd functions && npm install",
     "preview": "vite preview",
     "start:app": "npm run build:sw && vite",
-    "start:e2e-resources": "concurrently \"firebase emulators:start --only firestore,auth\" \"vite\"",
+    "start:e2e-resources": "concurrently 'firebase emulators:start --only firestore,auth' 'vite'",
     "start:e2e": "playwright test --ui",
     "start:firebase-emulators": "firebase emulators:start --import emulator_data --export-on-exit --only firestore,functions,auth,ui",
-    "start": "concurrently \"npm run start:app\" \"npm run start:firebase-emulators\"",
+    "start": "concurrently 'wait-on http://127.0.0.1:4000 && npm run start:app' 'npm run start:firebase-emulators'",
     "storybook": "storybook dev -p 9009",
     "test": "npm run lint && vitest"
   },
@@ -63,55 +63,57 @@
     }
   },
   "dependencies": {
-    "@tanstack/react-table": "^8.20.5",
+    "@tanstack/react-table": "^8.20.6",
     "bootstrap": "^3.4.1",
     "clsx": "^2.1.1",
     "downshift": "^9.0.8",
-    "esri-leaflet": "^3.0.12",
-    "firebase": "^10.14.0",
+    "esri-leaflet": "^3.0.14",
+    "firebase": "^11.1.0",
     "immer": "^10.1.1",
     "leaflet": "^1.9.4",
     "leaflet-loading": "^0.1.24",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
-    "proj4": "^2.12.1",
+    "proj4": "^2.15.0",
     "proj4leaflet": "^1.0.2",
-    "pubsub-js": "^1.9.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.0.13",
-    "react-leaflet": "^4.2.1",
-    "react-toastify": "^10.0.5",
+    "pubsub-js": "^1.9.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
+    "react-leaflet": "^5.0.0",
+    "react-toastify": "^11.0.2",
     "spin.js": "^4.1.2",
-    "use-immer": "^0.10.0",
-    "uuid": "^10.0.0"
+    "use-immer": "^0.11.0",
+    "uuid": "^11.0.4"
   },
   "devDependencies": {
-    "@playwright/test": "^1.47.2",
-    "@storybook/addon-actions": "^8.3.4",
-    "@storybook/addon-essentials": "^8.3.4",
-    "@storybook/addon-links": "^8.3.4",
+    "@chromatic-com/storybook": "^3.2.3",
+    "@playwright/test": "^1.49.1",
+    "@storybook/addon-actions": "^8.4.7",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^8.3.4",
-    "@storybook/react-vite": "^8.3.4",
-    "@types/node": "^22.7.4",
-    "@vitejs/plugin-react": "^4.3.2",
-    "concurrently": "^9.0.1",
-    "dotenv-cli": "^7.4.2",
-    "esbuild": "^0.24.0",
-    "eslint": "^8.57.0",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-vite": "^8.4.7",
+    "@types/node": "^22.10.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^9.1.2",
+    "dotenv-cli": "^8.0.0",
+    "esbuild": "^0.24.2",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-testing-library": "^6.3.0",
-    "firebase-tools": "^13.20.2",
-    "prettier": "^3.3.3",
-    "sass": "^1.79.4",
-    "storybook": "^8.3.4",
-    "vite": "^5.4.8",
-    "vitest": "^2.1.2"
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-testing-library": "^7.1.1",
+    "firebase-tools": "^13.29.1",
+    "prettier": "^3.4.2",
+    "sass": "^1.83.1",
+    "storybook": "^8.4.7",
+    "vite": "^6.0.7",
+    "vitest": "^2.1.8",
+    "wait-on": "^8.0.1"
   }
 }
